aziz pushed the navbar login and registration to the right

--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/Login.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/Login.cshtml
@@ -1,1 +1,27 @@
-﻿
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="~/css/Login.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+<body>
+
+    <form action="/action_page.php">
+        <div class="container">
+            <h1>Login</h1>
+            <p>Enter Your Login Details Below</p>
+            <hr>
+
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" id="email" required>
+
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+
+            <button type="submit" class="loginbtn">Log In</button>
+        </div>
+    </form>
+
+</body>
+</html>
