--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/Register.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="~/css/Login and RegistrationStylesheet.css" />
+    <link rel="stylesheet" href="~/css/Registration.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
