--- a/PRESTIGE GROOM ROOM REAL WEBSITE/wwwroot/css/Registration.css
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/wwwroot/css/Registration.css
@@ -1,6 +1,7 @@
 ﻿body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+    background-image: url(IMG_5574.jpg);
+    color: white;
 }
 
 * {
@@ -9,7 +10,7 @@
 
 /* Add padding to containers */
 .container {
-    background: none;
+     background-image: url(IMG_5574.jpg;);
 }
 
 /* Full-width input fields */
@@ -35,8 +36,8 @@ hr {
 
 /* Set a style for the submit button */
 .registerbtn {
-    background-color: #04AA6D;
-    color: white;
+    background-color: black;
+    color: gold;
     padding: 16px 20px;
     margin: 8px 0;
     border: none;
@@ -56,6 +57,5 @@ a {
 
 /* Set a grey background color and center the text of the "sign in" section */
 .signin {
-    background-color: white;
     text-align: center;
 }
