--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/About.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/About.cshtml
@@ -1,102 +1,40 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "About";
 }
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="~/css/site - Copy.css" rel="stylesheet" />
-    <style>
-        /* Change the link color on hover */
-        li a:hover {
-            background-color: black;
-            color: white;
-        }
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
 
-      
-        h1 {
-            text-align: center;
-        }
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="img1.jpg" style="width:100%">
+            <div class="text">Caption Text</div>
+        </div>
 
-        h2 {
-            color: white;
-        }
-        /*body {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 0;
-            
-        }*/
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="img2.jpg" style="width:100%">
+            <div class="text">Caption Two</div>
+        </div>
 
-        html {
-            box-sizing: border-box;
-        }
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="img3.jpg" style="width:100%">
+            <div class="text">Caption Three</div>
+        </div>
 
-        *, *:before, *:after {
-            box-sizing: inherit;
-        }
-
-        .column {
-            float: left;
-            width: 33.3%;
-            margin-bottom: 16px;
-            padding: 0 8px;
-        }
-
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            margin: 8px;
-        }
-
-        .about-section {
-            padding: 50px;
-            text-align: center;
-        }
-        .about-section {
-           padding: 50px;
-           text-align: center;
-}
-
-
-        .container {
-            padding: 0 16px;
-            color: white;
-        }
-
-            .container::after, .row::after {
-                content: "";
-                clear: both;
-                display: table;
-            }
-        h1{
-            text-align: center;
-            color: white;
-        }
-    </style>
-
-</head>
-
-
-
-<body class="slide5">
-    <div class="about-section">
-        <h1>About Us</h1>
-        <p1>
-            Welcome to Prestige Groom Room, your number one source for all things Self-Made Products. We're dedicated to providing you the very best of Men Grooming.
-
-
-            Founded in 2020 by Shane Williams, Prestige Groom Room has come a long way from its beginnings at Home. When Shane Williams first started out, His passion for Self-Made Products drove him to start his own business.
-
-
-            We hope you enjoy our products as much as we enjoy offering them to you. If you have any questions or comments, please don't hesitate to contact us.
-
-
-            Sincerely,
-
-            Shane Williams
-        </p1>
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-</body>
+    <br>
 
-
-
-
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+</head>
