--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/ContactUs.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/ContactUs.cshtml
@@ -1,33 +1,30 @@
-﻿@model ContactModel
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    <h4>Send your comments.</h4>
-    <hr />
-    <div class="form-group">
-        @Html.LabelFor(m => m.SenderName, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.SenderName, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.SenderName)
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.SenderEmail, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.SenderEmail, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.SenderEmail)
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Message, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextAreaFor(m => m.Message, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Message)
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Send" />
-        </div>
-    </div>
+﻿@{
+    ViewData["Title"] = "Contact Us";
 }
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="~/css/ContactUsStyleSheet.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+    <h3>Contact Form</h3>
+
+    <div class="container">
+        <form action="/action_page.php">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+            <label for="subject">Subject</label>
+            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+
+</body>
+</html>
