--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/About.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/About.cshtml
@@ -1,40 +1,158 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-
+<!DOCTYPE html>
 <head>
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
+    <link rel="stylesheet" href="~/css/AboutStyleSheet.css">
+    <style>
+        /* Change the link color on hover */
+        li a:hover {
+            background-color: black;
+            color: white;
+        }
 
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
-            <img src="img1.jpg" style="width:100%">
-            <div class="text">Caption Text</div>
-        </div>
+        body {
+            color: white;
+        }
 
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="img2.jpg" style="width:100%">
-            <div class="text">Caption Two</div>
-        </div>
 
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="img3.jpg" style="width:100%">
-            <div class="text">Caption Three</div>
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br>
-
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
+<body>
+    <div class="text-center">
+        <h1 style="font-family:'verdana';" color:white;">Prestige Groom Room</h1>
+        <p style="font-family:'Verdana'" ;"color:white;">Welcome To The Official Website For Prestige Groom Room</p>
+    </div>
+    <div class="wrap">
+        <div id="arrow-left" class="arrow"></div>
+        <div id="slider">
+            <div class="slide slide1">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide2">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide3">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide4">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide5">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide6">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide7">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide8">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide9">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide10">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide11">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide12">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+            <div class="slide slide13">
+                <div class="slide-content">
+                    <span>Prestige Groom Room</span>
+                </div>
+            </div>
+        </div>
+        <div id="arrow-right" class="arrow"></div>
+    </div>
+    <script>
+        let sliderImages = document.querySelectorAll(".slide"),
+            arrowLeft = document.querySelector("#arrow-left"),
+            arrowRight = document.querySelector("#arrow-right"),
+            current = 0;
+
+        // Clear all images
+        function reset() {
+            for (let i = 0; i < sliderImages.length; i++) {
+                sliderImages[i].style.display = "none";
+            }
+        }
+
+        // Init slider
+        function startSlide() {
+            reset();
+            sliderImages[0].style.display = "block";
+        }
+
+        // Show prev
+        function slideLeft() {
+            reset();
+            sliderImages[current - 1].style.display = "block";
+            current--;
+        }
+
+        // Show next
+        function slideRight() {
+            reset();
+            sliderImages[current + 1].style.display = "block";
+            current++;
+        }
+
+        // Left arrow click
+        arrowLeft.addEventListener("click", function () {
+            if (current === 0) {
+                current = sliderImages.length;
+            }
+            slideLeft();
+        });
+
+        // Right arrow click
+        arrowRight.addEventListener("click", function () {
+            if (current === sliderImages.length - 1) {
+                current = -1;
+            }
+            slideRight();
+        });
+
+        startSlide();
+
+    </script>
+
+</body>
+
+
+
+
+
