--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Shared/_Layout.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-action="register" asp-controller="account" class="nav-link">Register</a>
+                        </li>
 
                     </ul>
 
@@ -42,7 +45,7 @@
                     <li class="nav-item ">
                         <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Register">Register</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ">
                         <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
                     </li>
                 </ul>
