fixing about and index page also added prices for cuts on book now page.

--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/BookNow.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/BookNow.cshtml
@@ -21,16 +21,16 @@
 
             <label for="Haircut Style">Haircut Style</label>
             <select id="Time" name="Time">
-                <option value="Mid Fade">Mid Fade</option>
-                <option value="Razor Fade">Razor Fade</option>
-                <option value="Zero Fade">Zero Fade</option>
-                <option value="Hot Towel Shave">Hot Towel Shave</option>
-                <option value="Style Cut">Style Cut</option>
-                <option value="Scissor Cut">Scissor Cut</option>
-                <option value="Clipper Cut">Clipper Cut</option>
-                <option value="Beard Line Up">Beard Line Up</option>
-                <option value="Beard Trim">Beard Trim</option>
-                <option value="Line Up">Line Up</option>
+                <option value="Razor Fade">Razor Fade - $30</option>
+                <option value="Zero Fade">Zero Fade - $25</option>
+                <option value="Hot Towel Shave">Hot Towel Shave - $25</option>
+                <option value="Style Cut">Style Cut - $25</option>
+                <option value="Scissor Cut">Scissor Cut - $25</option>
+                <option value="Clipper Cut">Clipper Cut - $20</option>
+                <option value="Beard Line Up">Beard Line Up - $10</option>
+                <option value="Beard Trim">Beard Trim $10</option>
+                <option value="Line Up">Line Up - $5</option>
+                <option value="Design Line">Design Line - From $5</option>
             </select>
 
             <label for="email">Email</label>
