--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Shared/_Layout.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Shared/_Layout.cshtml
@@ -35,9 +35,11 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
                         </li>
                     </ul>
-                    <ul class=" navbar-nav ml-auto">
-                        <li class="nav-item ">
-                            <a asp-action="register" asp-controller="account" class="nav-link">Register</a>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="account" asp-action="register">
+                                Register
+                            </a>
                         </li>
                     </ul>
                 </div>
