--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Shared/_Layout.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Shared/_Layout.cshtml
@@ -34,12 +34,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
                         </li>
-                    </ul>
-                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="account" asp-action="register">
-                                Register
-                            </a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Register">Register</a>
                         </li>
                     </ul>
                 </div>
