--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/_ViewImports.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PRESTIGE_GROOM_ROOM_REAL_WEBSITE
 @using PRESTIGE_GROOM_ROOM_REAL_WEBSITE.Models
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
