--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Shared/_Layout.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Shared/_Layout.cshtml
@@ -42,16 +42,22 @@
                         {
                             <li class="nav-item">
                                 <form method="post" asp-action="logout" asp-controller="account">
-                                      <button type="submit" class="nav-link btn btn-link py-0">
-
-                                      </button>
+                                    <button type="submit" class="nav-link btn btn-link py-0"
+                                            style="width:auto">
+                                        Logout @User.Identity.Name
+                                    </button>
                                 </form>
                             </li>
-
                         }
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="account" asp-action="register">Register</a>
-                        </li>
+                        else
+                        {
+                            <li class="nav-item">
+                                <a asp-action="register" asp-controller="account" class="nav-link">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-action="login" asp-controller="account" class="nav-link">Login</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
