--- a/PRESTIGE GROOM ROOM REAL WEBSITE/wwwroot/css/site.css
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/wwwroot/css/site.css
@@ -77,3 +77,11 @@ body {
     font-family: 'verdana';
     color:white;
 }
+.btn {
+    width: 75px;
+}
+
+.imagethumbnail {
+    height: 200px;
+    width: auto;
+}
