--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/BookNow.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/BookNow.cshtml
@@ -12,12 +12,9 @@
     <h3>Place A Booking</h3>
 
     <div class="container">
-        <form action="/action_page.php">
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <form method="post" enctype="multipart/form-data" asp-controller="BookNow" asp-action="BookingToEmail">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Your name..">
 
             <label for="Haircut Style">Haircut Style</label>
             <select id="Time" name="Time">
