Touch Ups on error with booking system

--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/BookNow.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/BookNow.cshtml
@@ -12,7 +12,7 @@
     <h3>Place A Booking</h3>
 
     <div class="container">
-        <form method="post" enctype="multipart/form-data" asp-controller="BookNow" asp-action="BookingToEmail">
+        <form method="post" enctype="multipart/form-data" asp-controller="HomeController" asp-action="BookingToEmail">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Your name..">
 
