Fixed the redirect to page error with correct method and return type. To point to the correct controller method, you must always use the name of the controller without the word controller suffixed.

--- a/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/BookNow.cshtml
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/Views/Home/BookNow.cshtml
@@ -11,8 +11,9 @@
 
     <h3>Place A Booking</h3>
 
-    <div class="container">
-        <form method="post" enctype="multipart/form-data" asp-controller="HomeController" asp-action="BookingToEmail">
+    <div class="container"> 
+        @*changed the name of the controller to Home and replace the action method with MakeaBooking*@
+        <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="MakeaBooking">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Your name..">
 
